# interloq

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: build_test.yml
include/interloq/: file.hxx  interlock.hxx
src/: file.cxx  interlock.cxx
tests/: CMakeLists.txt  test_lever_frames.cxx
tests/data/: basic_leverframe.yml
